objects/Quote_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Deal_Id__c</fullName>
        <description>Displays Deal ID for the Associated Quote</description>
        <formula>Partner_Quote__r.Deal_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <formula>Partner_Quote__r.Opportunity_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Displays the associated Partner Quote with the Quote Summary</description>
        <label>Partner Quote</label>
        <referenceTo>Quote__c</referenceTo>
        <relationshipLabel>Quote Summary</relationshipLabel>
        <relationshipName>Quote_Summary1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Flags__c</fullName>
        <formula>IF(INCLUDES(Partner_Quote__r.Quote_Flags__c, 'Archived'), 'Archived', '')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Flags</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_ID__c</fullName>
        <formula>Partner_Quote__r.DM_Quote_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote ID</label>
        <type>Text</type>
    </fields>
    <description>Used to create a Link on related lists.  Also stores the Deal ID which is required in the punch out to PDR.</description>
    <label>Quote Summary</label>
    <nameField>
        <label>Quote Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>